@@ -93,23 +93,13 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
                     availability="musthave"
                     male_name="feral"
                     female_name="female^feral"
-                    description="Receive only 40% defense in villages"
+                    description="Receive at most 40% defense in villages"
                     [effect]
-                        apply_to=new_ability
-                        [abilities]
-                            [defense]
-                                id=feral
-                                name=""
-                                description=""
-                                value=60
-                                cumulative=no
-                                [filter_self]
-                                    [filter_location]
-                                        terrain=*^V*
-                                    [/filter_location]
-                                [/filter_self]
-                            [/defense]
-                        [/abilities]
+                        apply_to=defense
+                        replace=yes
+                        [defense]
+                            village=-60
+                        [/defense]
                     [/effect]
                 [/trait]
             [/modifications]
